force-app/main/default/objects/Portal_Payment_Transaction__c/fields/AuthorizeNet_Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeNet_Auth_Code__c</fullName>
    <label>Authorize.Net Auth Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>