force-app/main/default/objects/Portal_Payment_Transaction__c/fields/AuthorizeNet_AVS_Response__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeNet_AVS_Response__c</fullName>
    <label>Authorize.Net AVS Response</label>
    <length>20</length>
    <type>Text</type>
</CustomField>