force-app/main/default/objects/Portal_Payment_Transaction__c/fields/AuthorizeNet_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeNet_Entity_Name__c</fullName>
    <label>Authorize.Net Entity Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>