force-app/main/default/objects/Portal_Payment_Transaction__c/fields/AuthorizeNet_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeNet_Response_Code__c</fullName>
    <label>Authorize.Net Response Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>