force-app/main/default/objects/Portal_Payment_Transaction__c/fields/AuthorizeNet_Webhook_Id__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeNet_Webhook_Id__c</fullName>
    <label>Authorize.Net Webhook ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>