force-app/main/default/objects/Portal_Payment_Transaction__c/fields/Gateway_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Amount__c</fullName>
    <label>Gateway Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>