force-app/main/default/objects/Portal_Payment_Transaction__c/fields/Gateway_Currency__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Currency__c</fullName>
    <label>Gateway Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>