force-app/main/default/objects/Portal_Payment_Transaction__c/fields/Gateway_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Event_Date__c</fullName>
    <label>Gateway Event Date</label>
    <type>DateTime</type>
</CustomField>