force-app/main/default/objects/Portal_Payment_Transaction__c/fields/Gateway_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Event_Type__c</fullName>
    <label>Gateway Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>