force-app/main/default/objects/Portal_Payment_Transaction__c/fields/Gateway_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Reference_Number__c</fullName>
    <label>Gateway Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>