force-app/main/default/objects/Portal_Payment_Transaction__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>Portal_Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>