force-app/main/default/objects/Portal_Payment_Transaction__c/fields/Stripe_Capture_Method__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Capture_Method__c</fullName>
    <label>Stripe Capture Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>