force-app/main/default/objects/Portal_Payment_Transaction__c/fields/Stripe_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_Id__c</fullName>
    <label>Stripe Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>