force-app/main/default/objects/Portal_Payment_Transaction__c/fields/Stripe_Invoice_PDF_Url__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Invoice_PDF_Url__c</fullName>
    <label>Stripe Invoice PDF URL</label>
    <type>Url</type>
</CustomField>