force-app/main/default/objects/Portal_Payment_Transaction__c/fields/Stripe_Live_Mode__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Live_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stripe Live Mode</label>
    <type>Checkbox</type>
</CustomField>