force-app/main/default/objects/Portal_Payment_Transaction__c/fields/Stripe_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Request_Id__c</fullName>
    <label>Stripe Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>