force-app/main/default/objects/Portal_Payment_Transaction__c/fields/Stripe_Status__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Status__c</fullName>
    <label>Stripe Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>